tests/derive_compile_fail/tuple_struct_with_rename_all_none.stderr
error: `rename_all` cannot be applied to a tuple struct (implicit `by_position`)
 --> tests/derive_compile_fail/tuple_struct_with_rename_all_none.rs:5:11
  |
5 | struct Bad(i64, String);
  |           ^^^^^^^^^^^^^
