tests/derive_compile_fail/tuple_struct_with_rename_all_none.rs
use snowflake_connector_rs::FromRow;

#[derive(FromRow)]
#[snowflake(rename_all = "none")]
struct Bad(i64, String);

fn main() {}
